docs/grammar.ebnf
# Ferrite v2.0 — Canonical Grammar (EBNF)

> This grammar defines the complete syntax of the Ferrite v2.0 programming language.

## Lexical Structure

```ebnf
identifier        ::= letter { letter | digit | "_" }
type_identifier   ::= identifier
value_identifier  ::= identifier
effect_identifier ::= identifier
shape_identifier  ::= identifier

letter ::= "a"…"z" | "A"…"Z"
digit  ::= "0"…"9"
```

## Literals

```ebnf
int_lit    ::= digit { digit }
float_lit  ::= digit { digit } "." digit { digit }
bool_lit   ::= "true" | "false"
string_lit ::= '"' { character } '"'

literal ::= int_lit | float_lit | bool_lit | string_lit
```

## Keywords

```ebnf
keyword ::=
  "fun" | "keep" | "param" | "constant"
| "group" | "enum"
| "import" | "from" | "take" | "as"
| "if" | "elif" | "else"
| "while" | "for" | "in"
| "return" | "stop" | "skip"
| "match" | "case" | "default"
| "infer" | "train"
| "async" | "await" | "spawn" | "select"
| "where" | "self"
| "extern" | "unsafe"
```

## Program Structure

```ebnf
program ::= { top_decl } EOF

top_decl ::=
    import_decl
  | constant_decl
  | group_decl
  | enum_decl
  | func_decl
```

## Imports

```ebnf
import_decl ::=
    "import" string_lit ";"
  | "import" identifier "as" identifier ";"
  | "from" string_lit "take" identifier ";"
```

## Constants

```ebnf
constant_decl ::=
  "constant" value_identifier ":" type "=" expression ";"
```

## Effects

```ebnf
effect ::=
    "infer"
  | "train"
  | "async"
  | effect_identifier

effect_list ::= effect { effect }

effect_param_list ::= effect_identifier { "," effect_identifier }
```

## Traits & Generics

```ebnf
trait_ref  ::= identifier
trait_list ::= trait_ref { "+" trait_ref }

generic_param ::=
    type_identifier
  | shape_identifier ":" "shape"
  | type_identifier ":" trait_list

generic_param_list ::= generic_param { "," generic_param }
```

## Where Constraints

```ebnf
where_clause ::= "where" constraint { "," constraint }

constraint ::=
    shape_identifier rel_op int_lit
  | shape_identifier rel_op shape_identifier
  | type_identifier ":" trait_list

rel_op ::= "==" | "!=" | "<" | ">" | "<=" | ">="
```

## Groups (Structs)

```ebnf
group_decl ::=
  "group" type_identifier
  [ "<" generic_param_list ">" ]
  "{"
    { field_decl | method_decl }
  "}"

field_decl ::= value_identifier ":" type ";"

method_decl ::=
  [ effect_list ]
  "fun" value_identifier
  "(" "self" [ "," param_list ] ")"
  [ "->" [ effect_list ] type ]
  [ where_clause ]
  block
```

## Enums (ADTs)

```ebnf
enum_decl ::=
  "enum" type_identifier
  [ "<" generic_param_list ">" ]
  "{"
    { enum_variant }
  "}"

enum_variant ::=
  identifier [ "(" type_list ")" ] ";"
```

## Functions

```ebnf
func_decl ::=
  [ "<" effect_param_list [ "," generic_param_list ] ">" ]
  [ effect_list ]
  "fun" value_identifier
  [ "<" generic_param_list ">" ]
  "(" [ param_list ] ")"
  [ "->" [ effect_list ] type ]
  [ where_clause ]
  block
```

## Types

```ebnf
type ::=
    primitive_type
  | tensor_type
  | generic_type
  | type_identifier

primitive_type ::= "int" | "float" | "bool" | "string"

generic_type ::= type_identifier "<" type_list ">"

tensor_type ::=
  "Tensor" "<" type "," shape_tuple ">"

shape_tuple ::= "(" shape_dim { "," shape_dim } ")"

shape_dim ::= int_lit | shape_identifier
```

## Blocks & Statements

```ebnf
block ::= "{" { statement } "}"

statement ::=
    keep_decl
  | param_decl
  | expr_stmt
  | return_stmt
  | if_stmt
  | while_stmt
  | for_stmt
  | match_stmt
  | infer_block
  | train_block
  | select_stmt
  | stop_stmt
  | skip_stmt
```

## Variable & Parameter Declarations

```ebnf
param_list ::= param { "," param }
param      ::= value_identifier ":" type

keep_decl  ::= "keep" value_identifier ":" type "=" expression ";"
param_decl ::= "param" value_identifier ":" type "=" expression ";"
```

## Control Flow

```ebnf
if_stmt ::= "if" expression block
            { "elif" expression block }
            [ "else" block ]

while_stmt ::= "while" expression block
for_stmt   ::= "for" value_identifier "in" expression block

return_stmt ::= "return" [ expression ] ";"
stop_stmt   ::= "stop" ";"
skip_stmt   ::= "skip" ";"
```

## Match / Pattern Matching

```ebnf
match_stmt ::= "match" expression "{"
                { match_case }
              "}"

match_case ::=
    "case" pattern "=>" block
  | "default" "=>" block

pattern ::=
    literal
  | "_"
  | value_identifier
  | value_identifier "(" pattern_list ")"
  | value_identifier "{" pattern_field_list "}"
```

## ML Constructs

```ebnf
infer_block ::= "infer" block
train_block ::= "train" block
```

## Select (Structured Concurrency)

```ebnf
select_stmt ::= "select" "{"
                  { select_case }
                "}"

select_case ::=
    "case" assignment "=>" block
  | "default" "=>" block
```

## Expressions

```ebnf
expr_stmt  ::= expression ";"
expression ::= lambda_expr | assignment

lambda_expr ::= "(" [ param_list ] ")" "=>" expression
```

## Assignment & Operator Precedence

```ebnf
assignment ::= lvalue "=" assignment | logical_or

lvalue ::= value_identifier
         | primary "." identifier
         | primary "[" expression "]"

logical_or     ::= logical_and { "||" logical_and }
logical_and    ::= equality    { "&&" equality }
equality       ::= comparison  { ("==" | "!=") comparison }
comparison     ::= additive    { ("<" | ">" | "<=" | ">=") additive }
additive       ::= multiplicative { ("+" | "-") multiplicative }
multiplicative ::= unary { ("*" | "/" | "%") unary }

unary ::= "await" unary | [ "!" | "-" ] postfix
```

## Postfix & Primary

```ebnf
postfix ::= primary { postfix_op }

postfix_op ::=
    "(" [ arg_list ] ")"
  | "." identifier
  | "[" expression "]"

primary ::=
    literal
  | value_identifier
  | group_literal
  | "(" expression ")"
```

## Group (Struct) Literals

```ebnf
group_literal ::= type_identifier "{"
                    [ field_init_list ]
                  "}"

field_init_list ::= field_init { "," field_init }
field_init      ::= identifier ":" expression
```

## Arguments

```ebnf
arg_list ::= expression { "," expression }
```
